--- a/package.json
+++ b/package.json
@@ -5,11 +5,11 @@
   "license": "MIT",
   "repository": "github.com/gobuffalo/buffalo",
   "dependencies": {
-    "bootstrap": "4.1.3",
-    "popper.js": "^1.14.4",
+    "bootstrap": "^4.3.1",
     "font-awesome": "~4.7.0",
     "jquery": "~3.2.1",
-    "jquery-ujs": "~1.2.2"
+    "jquery-ujs": "~1.2.2",
+    "popper.js": "^1.14.4"
   },
   "devDependencies": {
     "@babel/cli": "^7.0.0",
